Add building without X11

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.14)
 
 project(LayoutWatcher LANGUAGES CXX)
 
+if(CMAKE_PROJECT_NAME STREQUAL PROJECT_NAME)
+	set(IS_TOPLEVEL_PROJECT TRUE)
+else()
+	set(IS_TOPLEVEL_PROJECT FALSE)
+endif()
+
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -12,15 +18,28 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
 find_package(QT NAMES Qt6 Qt5 COMPONENTS Core DBus REQUIRED)
 find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core DBus REQUIRED)
+find_package(X11)
 
-add_library(LayoutWatcher SHARED
-  LayoutWatcher_global.h
-  LayoutWatcher.cpp
-  LayoutWatcher.h
-  FallbackX11.cpp
-  FallbackX11.h
+option(LAYOUTWATCHER_LINK_X11 "Link library with X11. It's need for correctly work fallback, when main application doesn't linked with X11" ${X11_FOUND})
+option(LAYOUTWATCHER_BUILD_SHARED "Build shared library instead of static" ${IS_TOPLEVEL_PROJECT})
+
+file(GLOB ${PROJECT_NAME}_LIST
+	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
+)
+file(GLOB ${PROJECT_NAME}_LIST_H
+	${CMAKE_CURRENT_SOURCE_DIR}/*.h
+	${CMAKE_CURRENT_SOURCE_DIR}/*.hpp
 )
 
+if (LAYOUTWATCHER_BUILD_STATIC)
+	add_library(LayoutWatcher SHARED ${${PROJECT_NAME}_LIST} ${${PROJECT_NAME}_LIST_H})
+else()
+	add_library(LayoutWatcher STATIC ${${PROJECT_NAME}_LIST} ${${PROJECT_NAME}_LIST_H})
+endif()
+
 target_link_libraries(LayoutWatcher PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::DBus)
+if (LAYOUTWATCHER_LINK_X11 AND X11_FOUND)
+	target_link_libraries(LayoutWatcher PRIVATE X11::Xkb)
+endif()
 
 target_compile_definitions(LayoutWatcher PRIVATE LAYOUTWATCHER_LIBRARY)
