--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,15 +9,10 @@ else()
 endif()
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-set(CMAKE_AUTOUIC ON)
-set(CMAKE_AUTOMOC ON)
-set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 
-find_package(QT NAMES Qt6 Qt5 COMPONENTS Core DBus REQUIRED)
-find_package(Qt${QT_VERSION_MAJOR} COMPONENTS Core DBus REQUIRED)
 find_package(sdbus-c++ REQUIRED)
 find_package(X11)
 
@@ -38,7 +33,7 @@ else()
 	add_library(LayoutWatcher STATIC ${${PROJECT_NAME}_LIST} ${${PROJECT_NAME}_LIST_H})
 endif()
 
-target_link_libraries(LayoutWatcher PRIVATE Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::DBus SDBusCpp::sdbus-c++)
+target_link_libraries(LayoutWatcher PRIVATE SDBusCpp::sdbus-c++)
 if (LAYOUTWATCHER_LINK_X11 AND X11_FOUND)
 	target_link_libraries(LayoutWatcher PRIVATE X11::Xkb)
 endif()
